data/derived/sp14/progs/unify/prog1384.ml.out
Characters 179-184:
  helper (seen',rest') 
          ^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
